CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(vtkGeometry)
FIND_PACKAGE(VTK REQUIRED)
INCLUDE (${VTK_USE_FILE})
ADD_EXECUTABLE(vtkGeometry vtkGeometrySource.cpp)
#IF(VTK_LIBRARIES)
	TARGET_LINK_LIBRARIES(vtkGeometry ${VTK_LIBRARIES})
#ELSE()
#	TARGET_LINK_LIBRARIES(vtkGeometry vtkHybrid vtkWidgets)
#ENDIF()